--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "purescript-jtable",
   "license": "MIT",
   "authors": [
-    "John A. De Goes <john@degoes.net> (http://degoes.net)"
+    "John A. De Goes <john@degoes.net> (http://degoes.net)",
+    "Marton Boros <martonboros@gmail.com> (https://github.com/brainrape)"
   ],
   "ignore": [
     "**/.*",
@@ -17,8 +18,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-argonaut": "git@github.com:purescript-contrib/purescript-argonaut.git#0.3.0",
-    "purescript-smolder": "~1.0.2"
+    "purescript-smolder": "~2.0.0",
+    "purescript-argonaut": "~0.3.0"
   },
   "devDependencies": {},
   "resolutions": {
