--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,12 @@
   ],
   "dependencies": {
     "purescript-smolder": "~2.0.0",
-    "purescript-argonaut": "~0.3.0"
+    "purescript-argonaut": "~0.3.0",
+    "purescript-datetime": "~0.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "purescript-debug-foreign": "~0.0.4"
+  },
   "resolutions": {
     "purescript-maps": "~0.2.0"
   }
