--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,12 @@
     "purescript-datetime": "~0.2.0"
   },
   "devDependencies": {
-    "purescript-debug-foreign": "~0.0.4"
+    "purescript-debug-foreign": "~0.0.4",
+    "purescript-strongcheck": "~0.7.0",
+    "purescript-random": "jacereda/purescript-random#master"
   },
   "resolutions": {
-    "purescript-maps": "~0.2.0"
+    "purescript-maps": "~0.2.0",
+    "purescript-random": "jacereda/purescript-random#master"
   }
 }
