--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "purescript-jtable",
+  "version": "0.0.1",
   "license": "MIT",
   "repository": "git@github.com:slamdata/purescript-jtable.git",
   "contributors": [
