--- a/bower.json
+++ b/bower.json
@@ -18,18 +18,15 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-argonaut-core": "~0.2.0",
-    "purescript-argonaut-traversals": "~0.2.0",
-    "purescript-datetime": "~0.9.0",
-    "purescript-halogen": "30e8b2c7174a1eeda73f67cc42c739ca24a1e218"
-  },
-  "resolutions": {
-    "purescript-strings": "^0.7.0",
-    "purescript-enums": "^0.7.0",
-    "purescript-maps": "^0.5.0",
-    "purescript-free": "^0.7.0"
+    "purescript-argonaut-core": "^0.2.0",
+    "purescript-argonaut-traversals": "^0.3.0",
+    "purescript-datetime": "^0.9.0",
+    "purescript-halogen": "master"
   },
   "devDependencies": {
-    "purescript-strongcheck": "~0.12.1"
+    "purescript-strongcheck": "^0.13.0"
+  },
+  "resolutions": {
+    "purescript-transformers": "^0.8.1"
   }
 }
