--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "purescript-argonaut-core": "^0.2.0",
     "purescript-argonaut-traversals": "^0.3.0",
     "purescript-datetime": "^0.9.0",
-    "purescript-halogen": "master"
+    "purescript-halogen": "master",
+    "purescript-void": "^0.3.0",
+    "purescript-const": "^0.5.0"
   },
   "devDependencies": {
     "purescript-strongcheck": "^0.13.0"
